--- a/index.html
+++ b/index.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" href="favicon/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <style>
-        .center {
-          margin: 25%;
-          margin-top: 8%;
-          margin-bottom: 10%;
-          padding: 10px;
-          width: 50%;
-          text-align: center;
-          display: block;
+    <link rel="stylesheet" href="style.css">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "bewu",
+      "legalName" : "bewu Inc",
+      "url": "https://bewu.ga",
+      "@id": "https://bewu.ga",
+      "logo": "https://bewu.ga/favicon/bewu.png",
+      "foundingDate": "2021",
+      "founders": [
+        {
+         "@type": "Person",
+         "name": "Bartek bewu Włodarczyk"
         }
-        body {
-            background-color: #181a1b;
-            color: white;
-            font-family: 'Poppins', sans-serif;
-        }
-        a {
-          color: #3391ff;
-          text-decoration: none;
-          vertical-align: middle;
-        }
-        h1 {
-          font-size: 44px;
-        }
-        p {
-          font-size: 24px;
-        }
-        img {
-          width: 30px;
-          height: auto;
-          vertical-align: middle;
-        }
-    </style>
-    <title>bewu.ga</title>
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Warsaw",
+        "addressCountry": "PL"
+      },
+      "sameAs": [
+        "https://github.com/bewuwy",
+        "https://steamcommunity.com/id/bewuwy",
+        "https://mine.ly/b3wu.1"
+      ]
+    }
+    </script>
+    <title>bewu.ga - bewu</title>
+    <meta name="description" content="bewu to ja. tak, jestem komputerświrem, czemu pytasz?
+    poza tym mam projekty na Github, gry na Steam i konto w Minecraft i na Discord.">
   </head>
   <body>
     <div class="center">
       <h1>bewu</h1>
-      <p>tak to ja</p>
+      <p>tak, to ja, bewu</p>
+      <p style="font-size: 16px; margin-left: 10%; margin-right: 10%;">
+        hej, jestem komputerświrem, czemu pytasz?
+        poza tym mam projekty na <strong>Githubie</strong>,
+        gry na <strong>Steamie</strong>,
+        konto w <strong>Minecraft</strong>
+        i na <strong>Discordzie.</strong>
+      </p>
 
       <p>
         <img src="svg/discord.svg">
