--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "bewu",
-      "legalName" : "bewu Inc",
+      "legalName" : "bewuwy",
       "url": "https://bewu.ga",
       "@id": "https://bewu.ga",
       "logo": "https://bewu.ga/favicon/bewu.png",
@@ -37,7 +37,7 @@
     }
     </script>
     <title>bewu.ga - bewu</title>
-    <meta name="description" content="bewu to ja. tak, jestem komputerświrem, czemu pytasz?
+    <meta name="description" content="bewu to ja, znany też jako bewuwy. tak, jestem komputerświrem, czemu pytasz?
     poza tym mam projekty na Github, gry na Steam i konto w Minecraft i na Discord.">
   </head>
   <body>
@@ -50,6 +50,9 @@
         gry na <strong>Steamie</strong>,
         konto w <strong>Minecraft</strong>
         i na <strong>Discordzie.</strong>
+      </p>
+      <p style="font-size: 16px; margin-left: 10%; margin-right: 10%;">
+        no jakoś te tagi trzeba dodać lol
       </p>
 
       <p>
