--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
       </p>
 
       <p>
-        <img src="svg/discord.svg">
-        <a>bewu#0764</a>
+        <img src="svg/discord.svg" alt="Discord">
+        <a href="https://discord.com" rel="nofollow">bewu#0764</a>
       </p>
 
       <p>
-        <img src="svg/github.svg">
-        <a href="https://github.com/bewuwy">bewuwy</a>
+        <img src="svg/github.svg" alt="Github">
+        <a href="https://github.com/bewuwy" rel="nofollow">bewuwy</a>
       </p>
 
       <p>
-        <img src="svg/steam.svg">
-        <a href="https://steamcommunity.com/id/bewuwy/">bewu</a>
+        <img src="svg/steam.svg" alt="Steam">
+        <a href="https://steamcommunity.com/id/bewuwy/" rel="nofollow">bewu</a>
       </p>
 
       <p>
-        <img src="svg/mc.svg">
-        <a href="https://mine.ly/b3wu.1">b3wu</a>
+        <img src="svg/mc.svg" alt="Minecraft">
+        <a href="https://mine.ly/b3wu.1" rel="nofollow">b3wu</a>
       </p>
     </div>
   </body>
