renamed faq and about

--- a/faq/index.html
+++ b/faq/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="favicon/favicon.ico">
+    <link rel="icon" href="../favicon/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -15,17 +15,19 @@
       "itemListElement": [{
         "@type": "ListItem",
         "position": 1,
-        "name": "about",
-        "item": "https://bewu.ga/about"
+        "name": "faq",
+        "item": "https://bewu.ga/faq"
       }]
     }
     </script>
-    <title>bewu.ga - o mnie</title>
-    <meta name="description" content="(prawie) wszystko o bewu (o mnie)">
+    <title>bewu.ga - FAQ</title>
+    <meta name="description" content="często zadawane pytania (FAQ) o bewu (mnie)">
   </head>
   <body>
     <div class="center">
-      <p>(prawie)wszystko o bewu (czyli o mnie)</p>
+      <p>często zadawane pytania (FAQ) o bewu (mnie)</p>
+
+      <p style="font-size: 16px;"><a href="../">strona główna</a></p>
     </div>
   </body>
 </html>
