--- a/index.html
+++ b/index.html
@@ -43,17 +43,7 @@
   <body>
     <div class="center">
       <h1>bewu</h1>
-      <p>tak, to ja, bewu</p>
-      <p style="font-size: 16px; margin-left: 10%; margin-right: 10%;">
-        hej, jestem komputerświrem, czemu pytasz?
-        poza tym mam projekty na <strong>Githubie</strong>,
-        gry na <strong>Steamie</strong>,
-        konto w <strong>Minecraft</strong>
-        i na <strong>Discordzie.</strong>
-      </p>
-      <p style="font-size: 16px; margin-left: 10%; margin-right: 10%;">
-        no jakoś te tagi trzeba dodać lol
-      </p>
+      <p>tak, to ja, bewu (<a href="/about">o mnie</a>)</p>
 
       <p>
         <img src="svg/discord.svg" alt="Discord">
@@ -74,6 +64,9 @@
         <img src="svg/mc.svg" alt="Minecraft">
         <a href="https://mine.ly/b3wu.1" rel="nofollow">b3wu</a>
       </p>
+
+      <br/>
+      <p style="font-size: 16px;"><a href="/faq">faq</a></p>
     </div>
   </body>
 </html>
