added txt sitemap

--- a/404.html
+++ b/404.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>bewu.ga - not found</title>
 
-    <link rel="icon" href="favicon/favicon.ico">
+    <link rel="icon" href="/favicon/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <div class="center">
