github repo link

--- a/about/index.html
+++ b/about/index.html
@@ -27,20 +27,20 @@
     <div class="center">
       <p>(prawie)wszystko o bewu (czyli o mnie)</p>
 
-      <p style="font-size: 16px; margin-left: 10%; margin-right: 10%;">
+      <p class="f16">
         hej, jestem komputerświrem, czemu pytasz?
       </p>
-      <p style="font-size: 16px; margin-left: 10%; margin-right: 10%;">
+      <p class="f16">
         poza tym mam projekty na <strong>Githubie</strong>,
         gry na <strong>Steamie</strong>,
         konto w <strong>Minecraft</strong>
         i na <strong>Discordzie.</strong>
       </p>
-      <p style="font-size: 16px; margin-left: 10%; margin-right: 10%;">
+      <p class="f16">
         no jakoś te tagi trzeba dodać lol
       </p>
 
-      <p style="font-size: 16px;"><a href="../">strona główna</a></p>
+      <p class="f16"><a href="../">strona główna</a></p>
     </div>
   </body>
 </html>
