--- a/faq/index.html
+++ b/faq/index.html
@@ -27,7 +27,7 @@
     <div class="center">
       <p>często zadawane pytania (FAQ) o bewu (mnie)</p>
 
-      <p style="font-size: 16px;"><a href="../">strona główna</a></p>
+      <p class="f16"><a href="../">strona główna</a></p>
     </div>
   </body>
 </html>
