--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       ],
       "address": {
         "@type": "PostalAddress",
-        "addressLocality": "Warsaw",
+        "addressLocality": "Warszawa",
         "addressCountry": "PL"
       },
       "sameAs": [
@@ -66,7 +66,8 @@
       </p>
 
       <br/>
-      <p style="font-size: 16px;"><a href="/faq">faq</a></p>
+      <p class="f16"><a href="/faq">faq</a></p>
+      <p class="f16"><a href="https://github.com/bewuwy/bewuwy" rel="nofollow">github repo</a></p>
     </div>
   </body>
 </html>
