--- a/faq/index.html
+++ b/faq/index.html
@@ -20,12 +20,87 @@
       }]
     }
     </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [{
+        "@type": "Question",
+        "name": "Kim jest bewu?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "<strong>bewu</strong> to ja, a ja jestem uczącym się programistą. <br/> <a href=https://bewu.ga/about>dowiedz się więcej</a>."
+        }
+      }, {
+        "@type": "Question",
+        "name": "Czym jest strona bewu.ga?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Strona <a href=https://bewu.ga>bewu.ga</a> jest moją wizytówką, znajdują się tu moje konta społeczniościowe oraz projekty."
+        }
+      }, {
+        "@type": "Question",
+        "name": "Jak została stworzona ta strona?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text":"Strona <a href=https://bewu.ga>bewu.ga</a> napisana jest w języku HTML a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy aplikacji dostępny jest <a href=https://github.com/bewuwy/bewuwy>na stronie projektu na github</a>."
+        }
+      }, {
+        "@type": "Question",
+        "name": "Z jakiego oprogramowania korzysta bewu?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Obecnie <strong>bewu</strong> działa na Pythonie 3.8, ponieważ jego procesor nie obsługuje jeszcze nowszych wydań."
+        }
+      }, {
+        "@type": "Question",
+        "name": "Na jakim hardwarze działa bewu?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "W najnowszych modelach <strong>bewu</strong> wykorzystujemy procesory Intel i20 oraz kartę graficzną Nvidia 5080 super."
+        }
+      }]
+    }
+    </script>
+    <style>
+    p {
+      display: inline-block;
+    }
+    </style>
     <title>bewu.ga - FAQ</title>
-    <meta name="description" content="często zadawane pytania (FAQ) o bewu (mnie)">
+    <meta name="description" content="często zadawane pytania (FAQ) o bewu i stronie bewu.ga">
   </head>
   <body>
     <div class="center">
-      <p>często zadawane pytania (FAQ) o bewu (mnie)</p>
+      <h2>często zadawane pytania (FAQ) o bewu i tej stronie</h2>
+      <br/>
+
+      <ul>
+        <li>
+          <p class="f20">Dlaczego istnieje sekcja faq?</p>
+          <p class="f16">Ta sekcja <u><strong>nie</strong></u> istnieje jedynie po to, żeby pomóc w optymalizacji google</p>
+        </li>
+        <li>
+          <p class="f20">Kim jest bewu?</p>
+          <p class="f16"><strong>bewu</strong> to ja, a ja jestem uczącym się programistą. <br/> <a href="https://bewu.ga/about">dowiedz się więcej</a>.</p>
+        </li>
+        <li>
+          <p class="f20">Czym jest strona bewu.ga?</p>
+          <p class="f16">Strona <a href="https://bewu.ga">bewu.ga</a> jest moją wizytówką, znajdują się tu moje konta społeczniościowe oraz projekty.</p>
+        </li>
+        <li>
+          <p class="f20">Jak została stworzona ta strona?</p>
+          <p class="f16">Strona <a href="https://bewu.ga">bewu.ga</a> napisana jest w języku HTML a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy aplikacji dostępny jest <a href="https://github.com/bewuwy/bewuwy">na stronie projektu na githubie</a>.</p>
+        </li>
+        <li>
+          <p class="f20">Z jakiego oprogramowania korzysta bewu?</p>
+          <p class="f16">Obecnie <strong>bewu</strong> działa na Pythonie 3.8, ponieważ jego procesor nie obsługuje jeszcze nowszych wydań.</p>
+        </li>
+        <li>
+          <p class="f20">Na jakim hardwarze działa bewu?</p>
+          <p class="f16">W najnowszych modelach <strong>bewu</strong> wykorzystujemy procesory <strong>Intel i20</strong> oraz kartę graficzną <strong>Nvidia 5080 super</strong>.</p>
+        </li>
+      </ul>
 
       <p class="f16"><a href="../">strona główna</a></p>
     </div>
