--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       ]
     }
     </script>
+    <style>
+    a {
+      vertical-align: middle;
+    }
+    </style>
     <title>bewu.ga - bewu</title>
     <meta name="description" content="bewu to ja, znany też jako bewuwy. tak, jestem komputerświrem, czemu pytasz?
     poza tym mam projekty na Github, gry na Steam i konto w Minecraft i na Discord.">
