--- a/about/index.html
+++ b/about/index.html
@@ -24,6 +24,8 @@
     <meta name="description" content="(prawie)wszystko o bewu (o mnie)">
   </head>
   <body>
+    <script>0</script>
+
     <div class="center">
       <p>(prawie) wszystko o bewu (czyli o mnie)</p>
 
