--- a/faq/index.html
+++ b/faq/index.html
@@ -62,20 +62,17 @@
       }]
     }
     </script>
-    <style>
-    p {
-      display: inline-block;
-    }
-    </style>
     <title>bewu.ga - FAQ</title>
     <meta name="description" content="często zadawane pytania (FAQ) o bewu i stronie bewu.ga">
   </head>
   <body>
+    <script>0</script>
+
     <div class="center">
       <h2>często zadawane pytania (FAQ) o bewu i tej stronie</h2>
       <br/>
 
-      <ul>
+      <ul style="padding-right: 40px;">
         <li>
           <p class="f20">Dlaczego istnieje sekcja faq?</p>
           <p class="f16">Ta sekcja <u><strong>nie</strong></u> istnieje jedynie po to, żeby pomóc w optymalizacji google</p>
@@ -102,6 +99,7 @@
         </li>
       </ul>
 
+      <br/>
       <p class="f16"><a href="../">strona główna</a></p>
     </div>
   </body>
