--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     poza tym mam projekty na Github, gry na Steam i konto w Minecraft i na Discord.">
   </head>
   <body>
+    <script>0</script>
+
     <div class="center">
       <h1>bewu</h1>
       <p>tak, to ja, bewu (<a href="/about">o mnie</a>)</p>
