--- a/about/index.html
+++ b/about/index.html
@@ -26,6 +26,7 @@
   <body>
     <script>0</script>
 
+    <a href="/" style="overflow: inherit;"><img class="logo" src="../favicon/bewu_long.png" alt="bewu"></a>
     <div class="center">
       <p>(prawie) wszystko o bewu (czyli o mnie)</p>
 
