--- a/faq/index.html
+++ b/faq/index.html
@@ -68,6 +68,7 @@
   <body>
     <script>0</script>
 
+    <a href="/"><img class="logo" src="../favicon/bewu_long.png" alt="bewu"></a>
     <div class="center">
       <h2>często zadawane pytania (FAQ) o bewu i tej stronie</h2>
       <br/>
