--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <body>
     <script>0</script>
 
+    <a href="/"><img class="logo" src="favicon/bewu_long.png" alt="bewu"></a>
     <div class="center">
       <h1>bewu</h1>
       <p>tak, to ja, bewu (<a href="/about">o mnie</a>)</p>
