--- a/faq/index.html
+++ b/faq/index.html
@@ -29,7 +29,7 @@
         "name": "Kim jest bewu?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "<strong>bewu</strong> to ja, a ja jestem uczącym się programistą. <br/> <a href=https://bewu.ga/about>dowiedz się więcej</a>."
+          "text": "<strong>bewu</strong> to ja, bartek bewu bewuwy. <br/> <a href=https://bewu.ga/about>dowiedz się więcej</a>."
         }
       }, {
         "@type": "Question",
@@ -80,7 +80,7 @@
         </li>
         <li>
           <p class="f20">Kim jest bewu?</p>
-          <p class="f16"><strong>bewu</strong> to ja, a ja jestem uczącym się programistą. <br/> <a href="https://bewu.ga/about">dowiedz się więcej</a>.</p>
+          <p class="f16"><strong>bewu</strong> to ja, bartek bewu bewuwy. <br/> <a href="https://bewu.ga/about">dowiedz się więcej</a>.</p>
         </li>
         <li>
           <p class="f20">Czym jest strona bewu.ga?</p>
