--- a/faq/index.html
+++ b/faq/index.html
@@ -43,7 +43,7 @@
         "name": "Jak została stworzona ta strona?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text":"Strona <a href=https://bewu.ga>bewu.ga</a> napisana jest w języku HTML a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy aplikacji dostępny jest <a href=https://github.com/bewuwy/bewuwy>na stronie projektu na github</a>."
+          "text":"Strona <a href=https://bewu.ga>bewu.ga</a> napisana jest w języku HTML a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy strony dostępny jest <a href=https://github.com/bewuwy/bewuwy>na stronie projektu na github</a>."
         }
       }, {
         "@type": "Question",
@@ -88,7 +88,7 @@
         </li>
         <li>
           <p class="f20">Jak została stworzona ta strona?</p>
-          <p class="f16">Strona <a href="https://bewu.ga">bewu.ga</a> napisana jest w języku HTML a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy aplikacji dostępny jest <a href="https://github.com/bewuwy/bewuwy">na stronie projektu na githubie</a>.</p>
+          <p class="f16">Strona <a href="https://bewu.ga">bewu.ga</a> napisana jest w języku HTML a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy strony dostępny jest <a href="https://github.com/bewuwy/bewuwy">na stronie projektu na githubie</a>.</p>
         </li>
         <li>
           <p class="f20">Z jakiego oprogramowania korzysta bewu?</p>
