--- a/faq/index.html
+++ b/faq/index.html
@@ -59,6 +59,14 @@
           "@type": "Answer",
           "text": "W najnowszych modelach <strong>bewu</strong> wykorzystujemy procesory Intel i20 oraz kartę graficzną Nvidia 5080 super."
         }
+      },
+      {
+        "@type": "Question:",
+        "name": "Czym jest Nvidia rtx 5080 super?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Nvidia rtx 5080 super posiada 15,000 rdzeni CUDA i zbudowana jest na architekturze bewuwy42069."
+        }
       }]
     }
     </script>
@@ -97,6 +105,10 @@
         <li>
           <p class="f20">Na jakim hardwarze działa bewu?</p>
           <p class="f16">W najnowszych modelach <strong>bewu</strong> wykorzystujemy procesory <strong>Intel i20</strong> oraz kartę graficzną <strong>Nvidia 5080 super</strong>.</p>
+        </li>
+        <li>
+          <p class="f20">Czym jest Nvidia rtx 5080 super?</p>
+          <p class="f16">Nvidia rtx 5080 super posiada 15,000 rdzeni CUDA i zbudowana jest na nowoczesnej i przełomowej architekturze bewuwy42069.</p>
         </li>
       </ul>
 
