--- a/about/index.html
+++ b/about/index.html
@@ -26,9 +26,9 @@
   <body>
     <script>0</script>
 
-    <a href="/" style="overflow: inherit;"><img class="logo" src="../favicon/bewu_long.png" alt="bewu"></a>
+    <a href="/" rel="prev"><img class="logo" src="../favicon/bewu_long.png" alt="bewu"></a>
     <div class="center">
-      <p>(prawie) wszystko o bewu (czyli o mnie)</p>
+      <h1>(prawie) wszystko o bewu (czyli o mnie)</h1>
 
       <p class="f16">
         hej, jestem komputerświrem, czemu pytasz?
@@ -43,7 +43,7 @@
         no jakoś te tagi trzeba dodać lol
       </p>
 
-      <p class="f16"><a href="../">strona główna</a></p>
+      <p class="f16"><a href="../" rel="prev">strona główna</a></p>
     </div>
   </body>
 </html>
