--- a/faq/index.html
+++ b/faq/index.html
@@ -29,7 +29,7 @@
         "name": "Kim jest bewu?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "<strong>bewu</strong> to ja, bartek bewu bewuwy. <br/> <a href=https://bewu.ga/about>dowiedz się więcej</a>."
+          "text": "<strong>bewu</strong> to ja, bartek bewu bewuwy. <br/> <a href=https://bewu.ga/about/>dowiedz się więcej</a>."
         }
       }, {
         "@type": "Question",
@@ -76,9 +76,9 @@
   <body>
     <script>0</script>
 
-    <a href="/"><img class="logo" src="../favicon/bewu_long.png" alt="bewu"></a>
+    <a href="/" rel="prev"><img class="logo" src="../favicon/bewu_long.png" alt="bewu"></a>
     <div class="center">
-      <h2>często zadawane pytania (FAQ) o bewu i tej stronie</h2>
+      <h1>często zadawane pytania (FAQ) o bewu i tej stronie</h1>
       <br/>
 
       <ul style="padding-right: 40px;">
@@ -88,15 +88,15 @@
         </li>
         <li>
           <p class="f20">Kim jest bewu?</p>
-          <p class="f16"><strong>bewu</strong> to ja, bartek bewu bewuwy. <br/> <a href="https://bewu.ga/about">dowiedz się więcej</a>.</p>
+          <p class="f16"><strong>bewu</strong> to ja, bartek bewu bewuwy. <br/> <a href="../about/" rel="next">dowiedz się więcej</a>.</p>
         </li>
         <li>
           <p class="f20">Czym jest strona bewu.ga?</p>
-          <p class="f16">Strona <a href="https://bewu.ga">bewu.ga</a> jest moją wizytówką, znajdują się tu moje konta społeczniościowe oraz projekty.</p>
+          <p class="f16">Strona <a href="../" rel="prev">bewu.ga</a> jest moją wizytówką, znajdują się tu moje konta społeczniościowe oraz projekty.</p>
         </li>
         <li>
           <p class="f20">Jak została stworzona ta strona?</p>
-          <p class="f16">Strona <a href="https://bewu.ga">bewu.ga</a> napisana jest w języku HTML a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy strony dostępny jest <a href="https://github.com/bewuwy/bewuwy">na stronie projektu na githubie</a>.</p>
+          <p class="f16">Strona <a href="../" rel="prev">bewu.ga</a> napisana jest w języku HTML a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy strony dostępny jest <a href="https://github.com/bewuwy/bewuwy" rel="noreferrer">na stronie projektu na githubie</a>.</p>
         </li>
         <li>
           <p class="f20">Z jakiego oprogramowania korzysta bewu?</p>
@@ -113,7 +113,7 @@
       </ul>
 
       <br/>
-      <p class="f16"><a href="../">strona główna</a></p>
+      <p class="f16"><a href="../" rel="prev">strona główna</a></p>
     </div>
   </body>
 </html>
