--- a/index.html
+++ b/index.html
@@ -48,33 +48,33 @@
   <body>
     <script>0</script>
 
-    <a href="/"><img class="logo" src="favicon/bewu_long.png" alt="bewu"></a>
+    <a href="/" rel="prev"><img class="logo" src="favicon/bewu_long.png" alt="bewu"></a>
     <div class="center">
       <h1>bewu</h1>
-      <p>tak, to ja, bewu (<a href="/about">o mnie</a>)</p>
+      <p>tak, to ja, bewu (<a href="/about/" rel="next">o mnie</a>)</p>
 
       <p>
-        <img src="svg/discord.svg" alt="Discord">
+        <img src="svg/discord.svg" alt="Discord" width="30" height="22">
         <a href="https://discord.com" rel="nofollow" target="_blank">bewu#0764</a>
       </p>
 
       <p>
-        <img src="svg/github.svg" alt="Github">
+        <img src="svg/github.svg" alt="Github" width="30" height="30">
         <a href="https://github.com/bewuwy" rel="nofollow" target="_blank">bewuwy</a>
       </p>
 
       <p>
-        <img src="svg/steam.svg" alt="Steam">
+        <img src="svg/steam.svg" alt="Steam" width="30" height="30">
         <a href="https://steamcommunity.com/id/bewuwy/" rel="nofollow" target="_blank">bewu</a>
       </p>
 
       <p>
-        <img src="svg/mc.svg" alt="Minecraft">
+        <img src="svg/mc.svg" alt="Minecraft" width="30" height="30">
         <a href="https://mine.ly/b3wu.1" rel="nofollow" target="_blank">b3wu</a>
       </p>
 
       <br/>
-      <p class="f16"><a href="/faq">faq</a></p>
+      <p class="f16"><a href="/faq/" rel="next">faq</a></p>
       <p class="f16"><a href="https://github.com/bewuwy/bewuwy" rel="nofollow">github repo</a></p>
     </div>
   </body>
