--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
 
       <p>
         <img src="svg/discord.svg" alt="Discord" width="30" height="22">
-        <a href="https://discord.com" rel="nofollow" target="_blank">bewu#0764</a>
+        <a href="https://discord.com" rel="nofollow, noreferrer" target="_blank">bewu#0764</a>
       </p>
 
       <p>
         <img src="svg/github.svg" alt="Github" width="30" height="30">
-        <a href="https://github.com/bewuwy" rel="nofollow" target="_blank">bewuwy</a>
+        <a href="https://github.com/bewuwy" rel="nofollow, noreferrer" target="_blank">bewuwy</a>
       </p>
 
       <p>
         <img src="svg/steam.svg" alt="Steam" width="30" height="30">
-        <a href="https://steamcommunity.com/id/bewuwy/" rel="nofollow" target="_blank">bewu</a>
+        <a href="https://steamcommunity.com/id/bewuwy/" rel="nofollow, noreferrer" target="_blank">bewu</a>
       </p>
 
       <p>
         <img src="svg/mc.svg" alt="Minecraft" width="30" height="30">
-        <a href="https://mine.ly/b3wu.1" rel="nofollow" target="_blank">b3wu</a>
+        <a href="https://mine.ly/b3wu.1" rel="nofollow, noreferrer" target="_blank">b3wu</a>
       </p>
 
       <br/>
