--- a/faq/index.html
+++ b/faq/index.html
@@ -75,7 +75,7 @@
   <body>
     <script>0</script>
 
-    <a href="/" rel="prev"><img class="logo" src="../favicon/bewu_long.png" alt="bewu"></a>
+    <a href="/" rel="prev"><img class="logo" src="../favicon/bewu_long.png" alt="bewu"  width="200" height="43"></a>
     <div class="center">
       <h1>często zadawane pytania (FAQ) o bewu i tej stronie</h1>
       <br/>
