--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <script>0</script>
 
-    <a href="/" rel="prev"><img class="logo" src="favicon/bewu_long.png" alt="bewu"></a>
+    <a href="/" rel="prev"><img class="logo" src="favicon/bewu_long.png" alt="bewu" width="200" height="43"></a>
     <div class="center">
       <h1>bewu</h1>
       <p>tak, to ja, bewu (<a href="/about/" rel="next">o mnie</a>)</p>
