--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
   <body>
     <script>0</script>
 
-    <a href="/" rel="prev"><img class="logo" src="../favicon/bewu_long.png" alt="bewu"></a>
+    <a href="/" rel="prev"><img class="logo" src="../favicon/bewu_long.png" alt="bewu"  width="200" height="43"></a>
     <div class="center">
       <h1>(prawie) wszystko o bewu (czyli o mnie)</h1>
 
