--- a/faq/index.html
+++ b/faq/index.html
@@ -69,6 +69,12 @@
       }]
     }
     </script>
+    <style>
+    ul a {
+      color: white;
+      text-decoration: underline;
+    }
+    </style>
     <title>bewu.ga - FAQ</title>
     <meta name="description" content="często zadawane pytania (FAQ) o bewu i stronie bewu.ga">
   </head>
@@ -83,7 +89,7 @@
       <ul style="padding-right: 40px;">
         <li>
           <p class="f20">Dlaczego istnieje sekcja faq?</p>
-          <p class="f16">Ta sekcja <u><strong>nie</strong></u> istnieje jedynie po to, żeby pomóc w optymalizacji google</p>
+          <p class="f16">Ta sekcja <strong>nie</strong> istnieje jedynie po to, żeby pomóc w optymalizacji google</p>
         </li>
         <li>
           <p class="f20">Kim jest bewu?</p>
