main page revamp many things responsive, removed about page, moved imgs to folders

--- a/faq/index.html
+++ b/faq/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#181a1b"/>
 
-    <link rel="icon" href="../favicon/favicon.ico">
+    <link rel="icon" href="../favicon.ico">
     <link rel="stylesheet" href="../style.css">
     <script type="application/ld+json">
     {
@@ -28,7 +28,7 @@
         "name": "Kim jest bewu?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "<strong>bewu</strong> to ja, bartek bewu bewuwy. <br/> <a href=https://bewu.ga/about/>dowiedz się więcej</a>."
+          "text": "<strong>bewu</strong> to ja, bartek bewu bewuwy. <br/> <a href=https://bewu.ga/#about>dowiedz się więcej</a>."
         }
       }, {
         "@type": "Question",
@@ -81,7 +81,7 @@
   <body>
     <script>0</script>
 
-    <a href="/" rel="prev"><img class="logo" src="../favicon/bewu_long.png" alt="bewu"  width="200" height="43"></a>
+    <a href="/" rel="prev"><img class="logo" src="../img/bewu_long.png" alt="bewu"  width="200" height="43"></a>
     <div class="center">
       <h1>często zadawane pytania (FAQ) o bewu i tej stronie</h1>
       <br/>
@@ -93,7 +93,7 @@
         </li>
         <li>
           <p class="f20">Kim jest bewu?</p>
-          <p class="f16"><strong>bewu</strong> to ja, bartek bewu bewuwy. <br/> <a href="../about/" rel="next">dowiedz się więcej</a>.</p>
+          <p class="f16"><strong>bewu</strong> to ja, bartek bewu bewuwy. <br/> <a href="../#about" rel="next">dowiedz się więcej</a>.</p>
         </li>
         <li>
           <p class="f20">Czym jest strona bewu.ga?</p>
