added projects to index.html added projects page changed faq updated sitemaps

--- a/faq/index.html
+++ b/faq/index.html
@@ -15,7 +15,7 @@
         "@type": "ListItem",
         "position": 1,
         "name": "faq",
-        "item": "https://bewu.ga/faq"
+        "item": "https://bewu.ga/faq/"
       }]
     }
     </script>
@@ -28,28 +28,28 @@
         "name": "Kim jest bewu?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "<strong>bewu</strong> to ja, bartek bewu bewuwy. <br/> <a href=https://bewu.ga/#about>dowiedz się więcej</a>."
+          "text": "<strong>bewu</strong> to ja, bartek. <br/> <a href=https://bewu.ga/#about>więcej o mnie</a>."
         }
       }, {
         "@type": "Question",
         "name": "Czym jest strona bewu.ga?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Strona <a href=https://bewu.ga>bewu.ga</a> jest moją wizytówką, znajdują się tu moje konta społeczniościowe oraz projekty."
+          "text": "Strona <a href=https://bewu.ga/>bewu.ga</a> jest moją wizytówką, znajdują się tu moje konta społeczniościowe oraz projekty."
         }
       }, {
         "@type": "Question",
         "name": "Jak została stworzona ta strona?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text":"Strona <a href=https://bewu.ga>bewu.ga</a> napisana jest w języku HTML a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy strony dostępny jest <a href=https://github.com/bewuwy/bewuwy>na stronie projektu na github</a>."
+          "text":"Strona <a href=https://bewu.ga/>bewu.ga</a> napisana jest w języku HTML, a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy strony dostępny jest <a href=https://github.com/bewuwy/bewuwy rel=noreferrer>na stronie projektu na Githubie</a>."
         }
       }, {
         "@type": "Question",
         "name": "Z jakiego oprogramowania korzysta bewu?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Obecnie <strong>bewu</strong> działa na Pythonie 3.8, ponieważ jego procesor nie obsługuje jeszcze nowszych wydań."
+          "text": "Obecnie <strong>bewu</strong> działa na Windowsie 10, ponieważ Linux nie.</p>"
         }
       }, {
         "@type": "Question",
@@ -81,19 +81,23 @@
   <body>
     <script>0</script>
 
-    <a href="/" rel="prev"><img class="logo" src="../img/bewu_long.png" alt="bewu"  width="200" height="43"></a>
+    <a href="/" rel="prev" style="display: inline-block; margin: 30px; margin-bottom: 10px;">
+      <img src="../img/logo/bewu_long.png" alt="bewu.ga" style="height: 6vh; width: auto;">
+    </a>
     <div class="center">
-      <h1>często zadawane pytania (FAQ) o bewu i tej stronie</h1>
+      <h1>FAQ</h1>
+      <h2>często zadawane pytania o bewu i tej stronie</h2>
+      <p class="f16">jak na razie nikt mi nie zadał żadnego pytania, ale to nieważne, to są "często zadawane pytania"</p>
       <br/>
 
       <ul style="padding-right: 40px;">
         <li>
-          <p class="f20">Dlaczego istnieje sekcja faq?</p>
-          <p class="f16">Ta sekcja <strong>nie</strong> istnieje jedynie po to, żeby pomóc w optymalizacji google</p>
+          <p class="f20">Dlaczego istnieje sekcja FAQ?</p>
+          <p class="f16">Po to, żeby odpowiedzieć na wszystkie nurtujące pytania.</p>
         </li>
         <li>
           <p class="f20">Kim jest bewu?</p>
-          <p class="f16"><strong>bewu</strong> to ja, bartek bewu bewuwy. <br/> <a href="../#about" rel="next">dowiedz się więcej</a>.</p>
+          <p class="f16"><strong>bewu</strong> to ja, bartek. <br/> <a href="../#about" rel="next">więcej</a>.</p>
         </li>
         <li>
           <p class="f20">Czym jest strona bewu.ga?</p>
@@ -101,11 +105,11 @@
         </li>
         <li>
           <p class="f20">Jak została stworzona ta strona?</p>
-          <p class="f16">Strona <a href="../" rel="prev">bewu.ga</a> napisana jest w języku HTML a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy strony dostępny jest <a href="https://github.com/bewuwy/bewuwy" rel="noreferrer">na stronie projektu na githubie</a>.</p>
+          <p class="f16">Strona <a href="../" rel="prev">bewu.ga</a> napisana jest w języku HTML, a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy strony dostępny jest <a href="https://github.com/bewuwy/bewuwy" rel="noreferrer">na stronie projektu na Githubie</a>.</p>
         </li>
         <li>
           <p class="f20">Z jakiego oprogramowania korzysta bewu?</p>
-          <p class="f16">Obecnie <strong>bewu</strong> działa na Pythonie 3.8, ponieważ jego procesor nie obsługuje jeszcze nowszych wydań.</p>
+          <p class="f16">Obecnie <strong>bewu</strong> działa na Windowsie 10, ponieważ Linux nie.</p>
         </li>
         <li>
           <p class="f20">Na jakim hardwarze działa bewu?</p>
