--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       vertical-align: middle;
     }
     </style>
-    <title>bewu.ga - bewu</title>
+    <title>bewu.ga</title>
     <meta name="description" content="bewu to ja, znany też jako bewuwy. tak, jestem komputerświrem, czemu pytasz?
     poza tym mam projekty na Github, gry na Steam i konto w Minecraft i na Discord.">
   </head>
@@ -92,11 +92,11 @@
     <div class="banner" id="about">
       <div class="center">
         <h2>hejka, jestem bewu</h2>
-        <img src="img/picrew/normal.png" style="height: 25vh;">
+        <img src="img/picrew/asking.png" style="height: 25vh;">
         <p>kim dokładnie jestem?</p>
         <p class="f16">świetne pytanie! jestem komputerświrem</p>
         <p class="f16">zastanawiasz się teraz pewnie co to znaczy być komputerświrem, już odpowiadam</p>
-        <p class="f16">więc no umiem klikać w komputer i zrobiłem pare projektów, no i oczywiście jestem introwertykiem</p>
+        <p class="f16">więc no umiem klikać w komputer i zrobiłem pare projektów, no i jeszcze jestem introwertykiem</p>
 
         <div class="arrowDiv">
           <p class="f16">zjedź niżej</p>
@@ -107,10 +107,26 @@
 
     <div class="banner" id="projects">
       <div class="center">
-        <br/>
-        <p class="f16"><a href="/faq/" rel="next">faq</a></p>
-        <p class="f16"><a href="https://github.com/bewuwy/bewuwy" rel="nofollow">github repo</a></p>
+          <h2>Projekty</h2>
+          <p class="f16">większość moich projektów jest napisana w Pythonie, jednak staram się uczyć jak największej ilości języków.</p>
+          <p class="f16">ta strona na przykład napisana jest w całości w HTML i CSS.</p>
+          <p class="f16">oprócz tego znam jeszcze podstawy Javy i prawie podstawy C++</p>
+          <p class="f16">umiem jeszcze kopiować kod z stackoverflow</p>
+          <p class="f16"><a href="/projects/" rel="next">pełna lista moich projektów</a></p>
+
+          <div class="arrowDiv">
+            <p class="f16">zjedź niżej</p>
+            <img src="img/icons/arrow.webp" width="50" alt="arrow" class="arrow" onclick="moveTo('#footer')">
+          </div>
       </div>
     </div>
+
+    <footer id="footer" style="background-color: #0c0d0e;">
+      <div class="center" style="padding-bottom: 0; padding-top: 0;">
+        <p class="f16"><a href="/faq/" rel="next">faq</a></p>
+        <p class="f16"><a href="https://github.com/bewuwy/bewuwy" rel="nofollow">github repo</a></p>
+        <p class="f16">©2021 Bartek Włodarczyk</p>
+      </div>
+    </footer>
   </body>
 </html>
